--- a/public/contact.html
+++ b/public/contact.html
@@ -1,6 +1,6 @@
 <h1>Contact Me</h1>
-<p>Tel: +9522920254</p>
-<p>Email: dlburon11@gmail.com</p>
+<p>Tel: +1234567890</p>
+<p>Email: outofdate@gmail.com</p>
 <p>Location:<br />
   Brooklyn, NY <br />
   USA <br />
